# PathMutationRenderer

./: .gitignore  CMakeLists.txt  PathMutation.slnx  README.md  vcpkg.json
include/: GeomUtil.h  Renderer.h  path_mutator.h  scene.h
src/: GeomUtil.cpp  PathMutator.cpp  Renderer.cpp  main.cpp  scene.cpp  test_code.cpp
